[tool.black]
line-length = 79
exclude = '''
/(
    \.venv
)/
'''

[tool.isort]
multi_line_output=3
include_trailing_comma = true

[tool.poetry]
name = "hush"
version = "2020.1.11"
description = "Minimalistic command line secret management"
license = "BSD-3-Clause"
authors = ["Lech Gudalewicz <lechgu@gmail.com>"]
repository = "https://github.com/lechgu/hush"


[tool.poetry.dependencies]
python = "~3.7 || ~3.8"
click = "^7.0"
python-dotenv = "^0.10.3"
pycryptodome = "^3.9.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.7.9"
pep8-naming = "^0.9.1"
twine = "^3.1.1"
flake8-isort = "^2.8.0"
bump2version = "^0.5.11"

[tool.poetry.scripts]
hush = 'hush:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
