[tool.black]
line-length = 79
exclude = '''
/(
    \.venv
)/
'''

[tool.isort]
multi_line_output=3
include_trailing_comma = true

[tool.poetry]
name = "hush"
version = "2.0.0"
description = "Minimalistic command line secret management"
license = "BSD-3-Clause"
authors = ["Lech Gudalewicz <lechgu@gmail.com>"]
repository = "https://github.com/lechgu/hush"


[tool.poetry.dependencies]
python = "~3.7 || ~3.8 || ~3.9"
click = "^7.0"
pycryptodome = "^3.9.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
hush = 'hush:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
